Added single-page theme and speakers information

--- a/index.html
+++ b/index.html
@@ -1,10 +1,274 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<link rel="shortcut icon" href="assets/ico/favicon.png">
 
-<div class="home">
+<title>Des Moines Agile Day - 2014</title>
 
-  <h1>Home Grown Agile</h1>
+<!-- Bootstrap core CSS -->
+<link href="assets/css/bootstrap.css" rel="stylesheet">
+
+<!-- Custom styles for this template -->
+<link href="assets/css/main.css" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/icomoon.css">
+<link href="assets/css/animate-custom.css" rel="stylesheet">
+
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+
+<script src="assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
+
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+      <script src="assets/js/html5shiv.js"></script>
+      <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body data-spy="scroll" data-offset="0" data-target="#navbar-main">
 
 
-</div>
+<div id="navbar-main">
+  <!-- Fixed navbar -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon icon-menu" style="font-size:30px; color:#3498db;"></span>
+        </button>
+        <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-menu" style="font-size:18px; color:#3498db;"></span></a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#home" class="smoothScroll">Home</a></li>
+          <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
+          <!--<li> <a href="#sessions" class="smoothScroll"> Sessions</a></li>-->
+          <!--<li> <a href="#spaces" class="smoothScroll"> Spaces</a></li>-->
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+  </div>
+
+  <!-- ==== HEADERWRAP ==== -->
+  <div id="headerwrap" id="home" name="home">
+    <header class="clearfix">
+      <h1>dsmAgile</h1>
+      <p>Discuss. Discover. Learn.</p>
+      <p>Friday, September 12th 2014</p>
+    </header>	    
+  </div>
+
+  <!-- ==== SPEAKERS ==== -->
+  <div class="container" id="speakers" name="speakers">
+    <br>
+    <div class="row white centered">
+      <h1 class="centered">SPEAKERS</h1>
+      <hr>
+      <br>
+      <br>
+
+
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/tim-andersen.jpeg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Tim Andersen</b></h4>
+        <a href="https://twitter.com/timander" class="icon icon-twitter"></a>
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p>
+        Tim has worked in software development in several industries including financial, fundraising, insurance, and telecommunications. He has played several roles including Agile Coach, Tech Lead, Software Developer, Database Administrator, and Business Analyst. His real passion is to work with people to understand their context and help them introduce incremental improvements to get better at software development. Tim is currently an Embedded XP Coach for Lean TECHniques, Inc. and is consulting with Principal Financial Group.</p>
+        <!--<p>-->
+        <!--Prior to his work with Lean TECHniques, Tim was a Software Developer and Tech Lead at Iowa Student Loan immersed in a culture of Extreme Programming where he learned many valuable skills including Test-Driven Development, Pair Programming, Refactoring, and Continuous Integration. While at Iowa Student Loan, Tim was interviewed by Gojko Adzic and his story is featured as a case-study in the book Specification by Example.-->
+        <!--</p>-->
+        <!--<p>-->
+        <!--Conferences Tim has presented at include the Agile 2009 conference (Chicago), Code Freeze 2010 (Twin Cities), and Agile Day Twin Cities 2011. He has also presented at the Central Iowa Java User Group and has been the leader of the Agile Iowa user group (2007-2012).-->
+        <!--</p>-->
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/ryan-bergman.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Ryan Bergman</b></h4>
+        <a href="https://twitter.com/ryber" class="icon icon-twitter"></a>
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p>Ryan Bergman is a software architect and programmer for John Deere Intelligent Solutions Group in Urbandale Iowa. He has worked as a professional technologist in the Des Moines area for the last 15 years. You can catch Ryan later this summer at the Agile 2014 conference in Orlando where he will be presenting on Continuous Delivery.</p>
+      </div>	
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/brandon-carlson.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Brandon Carlson</b></h4>
+        <a href="https://twitter.com/bcarlso" class="icon icon-twitter"></a>
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p>Brandon is the IT Nerd at Lean TECHniques. He is an Agile &amp; TDD practitioner specializing in turning Vision into Value.
+
+        Specialties:Killing waste in the product development life cycle, reducing costs, and building great products.</p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Jeffrey Davidson</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>David Hussman</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Todd Little</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Niel Nickolaisen</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Bob Payne</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Pollyanna Pixton</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/kristin-runyan.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Kristin Runyan</b></h4>
+        <a href="https://twitter.com/kristinrunyan" class="icon icon-twitter"></a>
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p>Kristin Runyan is the VP of Product Management at Businessolver, a benefits administration company located in West Des Moines, IA. Kristin is the co-author of a textbook called “Introduction to Agile Methods” which was released in the summer of 2014. Kristin is certified as a Scrum Master (CSM), Scrum Product Owner (CSPO), and a Project Management Professional (PMP). She is also a 2011 winner of the Women of Innovation award from the Technology Association of Iowa. Kristin got her undergraduate degree at Texas Christian University (TCU) and her MBA at Saint Louis University (SLU). Her twitter handle is @KristinRunyan and she regularly blogs at www.runyanconsulting.com.</p>
+      </div>
+
+      <div class="col-lg-3 centered">
+        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <br>
+        <h4><b>Natalie Warnert</b></h4>
+        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <!--<a href="#" class="icon icon-flickr"></a>-->
+        <p></p>
+      </div>
+
+
+      <!-- End Speakers -->  
+    </div>
+  </div>
+
+
+  <!-- ==== SESSIONS ==== -->
+  <!--<div class="container" id="sessions" name="sessions">-->
+  <!--<div class="row white">-->
+  <!--<br>-->
+  <!--<h1 class="centered">SESSIONS</h1>-->
+  <!--<hr>-->
+
+  <!--<div class="col-lg-2">-->
+  <!--<h1>Coming Soon!</h1>-->
+  <!--</div>-->
+
+  <!--</div>-->
+  <!--</div>-->
+
+  <!-- ==== SECTION DIVIDER1 -->
+  <section class="section-divider textdivider divider1">
+    <div class="container">
+      <h1>&nbsp;</h1>
+      <p>&nbsp;</p>
+    </div>
+  </section>
+
+
+  <!-- ==== SPEAKERS==== -->
+  <!--<div class="container" id="spaces" name="spaces">-->
+  <!--<br>-->
+  <!--<br>-->
+  <!--<div class="row">-->
+  <!--<h1 class="centered">SPACES</h1>-->
+  <!--<br>-->
+  <!--<div class="col-lg-offset-2 col-lg-8">-->
+  <!--</div>-->
+  <!--</div>-->
+
+  <!--<div class="row">-->
+  <!--<h2 class="centered">Des Moines Public Library</h2>-->
+  <!--<hr>-->
+  <!--<br>-->
+  <!--<div class="col-lg-offset-2 col-lg-8">-->
+  <!--<img class="img-responsive" src="assets/img/spaces/dm-public-library.jpg" alt="">-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+
+  <!--<div class="row">-->
+  <!--<h2 class="centered">Americana</h2>-->
+  <!--<hr>-->
+  <!--<br>-->
+  <!--<div class="col-lg-offset-2 col-lg-6">-->
+  <!--<img class="img-responsive" src="assets/img/spaces/americana.jpg" alt="">-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+
+
+  <div id="footerwrap">
+    <div class="container">
+      <h4>
+        Copyright 2014</h4>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript
+    ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+
+
+  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/retina.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
+  <script type="text/javascript" src="assets/js/jquery-func.js"></script>
+  </body>
+  </html>
