Added large register button

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
+
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon icon-menu" style="font-size:30px; color:#3498db;"></span>
         </button>
         <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-menu" style="font-size:18px; color:#3498db;"></span></a>
       </div>
       <div class="navbar-collapse collapse">
+
         <ul class="nav navbar-nav">
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
@@ -59,7 +61,12 @@
       <h1>dsmAgile</h1>
       <p>Discuss. Discover. Learn.</p>
       <p>Friday, September 12th 2014</p>
-    </header>	    
+      <p>
+      <a href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">
+        <button class="btn btn-success btn-large">Register Now</button>
+        </a>
+        </p>
+               </header>	    
   </div>
 
   <!-- ==== SPEAKERS ==== -->
