Updated bcarlso's bio

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ga('send', 'pageview');
         <button class="btn btn-success btn-large">Register Now</button>
       </a>
       </p>
-    </header>	    
+    </header>
   </div>
 
   <!-- ==== SPEAKERS ==== -->
@@ -114,7 +114,7 @@ ga('send', 'pageview');
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
         <p>Ryan Bergman is a software architect and programmer for John Deere Intelligent Solutions Group in Urbandale Iowa. He has worked as a professional technologist in the Des Moines area for the last 15 years. You can catch Ryan later this summer at the Agile 2014 conference in Orlando where he will be presenting on Continuous Delivery.</p>
-      </div>	
+      </div>
 
       <div class="col-lg-3 centered">
         <img class="img img-circle" src="assets/img/speakers/brandon-carlson.jpg" height="120px" width="120px" alt="">
@@ -123,9 +123,8 @@ ga('send', 'pageview');
         <a href="https://twitter.com/bcarlso" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p>Brandon is the IT Nerd at Lean TECHniques. He is an Agile &amp; TDD practitioner specializing in turning Vision into Value.
-
-        Specialties:Killing waste in the product development life cycle, reducing costs, and building great products.</p>
+        <p>A self-proclaimed nerd, Brandon Carlson works for Lean TECHniques, Inc., an IT consultancy that helps teams deliver high-value, high-quality products to market. Since starting his career in 1995, Brandon has been blessed with nearly 20 years of experience to remind him how much more there is to learn. Passionate about elevating the performance of the IT industry, he has helped numerous organizations from startups to Fortune 100 companies improve their product development and delivery systems. Brandon’s current interests include behavioral psychology and professionalism in the world of software development. He can be reached on Twitter and pretty much everywhere else on the web as “bcarlso”.
+        </p>
       </div>
 
       <div class="col-lg-3 centered">
@@ -209,7 +208,7 @@ ga('send', 'pageview');
       </div>
 
 
-      <!-- End Speakers -->  
+      <!-- End Speakers -->
     </div>
   </div>
 
