Added Jeffrery and Natalie photo and bio

--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@ ga('send', 'pageview');
       <h1>dsmAgile</h1>
       <p>Discuss. Discover. Learn.</p>
       <p>Friday, September 12th 2014</p>
-      <p>
-      <a href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">
-        <button class="btn btn-success btn-large">Register Now</button>
+      <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Register Now
       </a>
-      </p>
-    </header>
+    </header>	    
   </div>
 
   <!-- ==== SPEAKERS ==== -->
@@ -98,12 +95,12 @@ ga('send', 'pageview');
         <!--<a href="#" class="icon icon-flickr"></a>-->
         <p>
         Tim has worked in software development in several industries including financial, fundraising, insurance, and telecommunications. He has played several roles including Agile Coach, Tech Lead, Software Developer, Database Administrator, and Business Analyst. His real passion is to work with people to understand their context and help them introduce incremental improvements to get better at software development. Tim is currently an Embedded XP Coach for Lean TECHniques, Inc. and is consulting with Principal Financial Group.</p>
-        <!--<p>-->
-        <!--Prior to his work with Lean TECHniques, Tim was a Software Developer and Tech Lead at Iowa Student Loan immersed in a culture of Extreme Programming where he learned many valuable skills including Test-Driven Development, Pair Programming, Refactoring, and Continuous Integration. While at Iowa Student Loan, Tim was interviewed by Gojko Adzic and his story is featured as a case-study in the book Specification by Example.-->
-        <!--</p>-->
-        <!--<p>-->
-        <!--Conferences Tim has presented at include the Agile 2009 conference (Chicago), Code Freeze 2010 (Twin Cities), and Agile Day Twin Cities 2011. He has also presented at the Central Iowa Java User Group and has been the leader of the Agile Iowa user group (2007-2012).-->
-        <!--</p>-->
+        <p>
+        Prior to his work with Lean TECHniques, Tim was a Software Developer and Tech Lead at Iowa Student Loan immersed in a culture of Extreme Programming where he learned many valuable skills including Test-Driven Development, Pair Programming, Refactoring, and Continuous Integration. While at Iowa Student Loan, Tim was interviewed by Gojko Adzic and his story is featured as a case-study in the book Specification by Example.
+        </p>
+        <p>
+        Conferences Tim has presented at include the Agile 2009 conference (Chicago), Code Freeze 2010 (Twin Cities), and Agile Day Twin Cities 2011. He has also presented at the Central Iowa Java User Group and has been the leader of the Agile Iowa user group (2007-2012).
+        </p>
       </div>
 
       <div class="col-lg-3 centered">
@@ -128,13 +125,17 @@ ga('send', 'pageview');
       </div>
 
       <div class="col-lg-3 centered">
-        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <img class="img img-circle" src="assets/img/speakers/jeffrey-davidson.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Jeffrey Davidson</b></h4>
-        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <a href="https://twitter.com/JeffreyGoodReq" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>Jeffrey Davidson has been in management and consulting for almost two decades with a focus on building world-class teams. During his career, Jeffrey has served in Executive, Operational, Administrative, and IT management roles across different industries, including retail, telecommunication, and travel industries. His consulting and coaching experience has focused on operational excellence, software development, and organizational transformation. For the past five years, Jeffrey has championed agile transformation programs to bring transparency and efficiency to IT departments and development teams.
+        </p>
+        <p>
+Mr. Davidson is a recognized expert and sought after speaker in agile methodologies. An engaging presenter, he is often found at conferences and professional associations across North America and Europe. Jeffrey’s ability to blend strategic thinking, powerful questions, and technical experience makes him a desired coach when companies want to turn theoretical knowledge into real-world application.
+      </p>
       </div>
 
       <div class="col-lg-3 centered">
@@ -194,17 +195,28 @@ ga('send', 'pageview');
         <a href="https://twitter.com/kristinrunyan" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p>Kristin Runyan is the VP of Product Management at Businessolver, a benefits administration company located in West Des Moines, IA. Kristin is the co-author of a textbook called “Introduction to Agile Methods” which was released in the summer of 2014. Kristin is certified as a Scrum Master (CSM), Scrum Product Owner (CSPO), and a Project Management Professional (PMP). She is also a 2011 winner of the Women of Innovation award from the Technology Association of Iowa. Kristin got her undergraduate degree at Texas Christian University (TCU) and her MBA at Saint Louis University (SLU). Her twitter handle is @KristinRunyan and she regularly blogs at www.runyanconsulting.com.</p>
+        <p>Kristin Runyan is the VP of Product Management at Businessolver, a benefits administration company located in West Des Moines, IA. Kristin is the co-author of a textbook called “Introduction to Agile Methods” which was released in the summer of 2014. Kristin is certified as a Scrum Master (CSM), Scrum Product Owner (CSPO), and a Project Management Professional (PMP). She is also a 2011 winner of the Women of Innovation award from the Technology Association of Iowa. Kristin got her undergraduate degree at Texas Christian University (TCU) and her MBA at Saint Louis University (SLU). Her twitter handle is @KristinRunyan and she regularly blogs at <a href="http://www.runyanconsulting.com">www.runyanyconsulting.com</a>.</p>
       </div>
 
       <div class="col-lg-3 centered">
-        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <img class="img img-circle" src="assets/img/speakers/natalie-warnert.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Natalie Warnert</b></h4>
-        <!--<a href="#" class="icon icon-twitter"></a>-->
-        <!--<a href="#" class="icon icon-facebook"></a>-->
+        <a href="https://twitter.com/nataliewarnert" class="icon icon-twitter"></a>
+        <a href="https://www.linkedin.com/pub/natalie-warnert/19/480/375" class="icon icon-facebook"></a>
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>
+Natalie Warnert is an industry recognized expert and thought leader in Agile practices based out of Minneapolis, MN. She started her career as a developer and moved into project management and Agile methodologies shortly after.
+</p>
+<p>
+Her passion is in coaching teams and implementing Agile frameworks in Fortune 500 organizations such as Travelers Insurance and Thomson Reuters.  Currently, Natalie works as a ScrumMaster and Agile Coach at Surescripts, LLC, the nation’s most comprehensive clinical network. Surescripts specializes in E -Prescription routing and other clinical transactions with over 6 billion transactions routed last year.
+</p>
+<p>
+Natalie is a frequent speaker at large national Agile conferences including the Scrum Gathering and Agile Alliance. She has several published articles, interviews, and webinars on Agile topics. Natalie frequently blogs on Agile <a href="http://www.nataliewarnert.com">www.nataliewarnert.com</a>, and shares her thoughts and ideas on social media outlets.
+</p>
+<p>
+Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Administration in Information Systems from the University of Wisconsin – Eau Claire. She is currently finishing her Master of Arts in Organizational Leadership and Strategic Management at St. Catherine University. In her free time, Natalie likes to read, snowboard, and play Cribbage.
+</p>
       </div>
 
 
