--- a/index.html
+++ b/index.html
@@ -159,13 +159,24 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
       </div>
 
       <div class="col-lg-3 centered">
-        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <img class="img img-circle" src="assets/img/speakers/niel-nickolaisen.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Niel Nickolaisen</b></h4>
-        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <a href="https://twitter.com/NNickolaisen" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>
+Niel Nickolaisen is the CIO at OC Tanner. He has held technology executive and operations executive positions; typically in turnaround roles. His strategic and tactical alignment model significantly improves returns on technology and business initiatives. He has a passion for helping others deliver on what he calls the dual role of enterprise IT: 1) Enable strategy and 2) Achieve operational excellence.
+</p>
+<p>
+He holds a MS in Engineering from MIT, a BS in Physics from Utah State University, and an MBA from Utah State University.
+</p>
+<p>
+He writes an enterprise CIO column for SearchCIO and is a contributor to CIO Magazine. He is the author of “The Agile Culture” (Addison Wesley, 2014) and Stand Back and Deliver (Addison Wesley, 2009). CRN Magazine named Niel one of the top 25 IT Executives of 2008. 
+</p>
+<p>
+Niel is a popular speaker on a variety of IT and leadership topics including IT Alignment, Strategic Planning, Agile Principles, and IT Lean. Several times a year he teaches a course titled “The Practices of Transformational Leaders” – a course that consistently receives exceptional reviews and feedback.      
+</p>
       </div>
 
       <div class="col-lg-3 centered">
