Added Niel's session and changed to 2 columns for speakers and sessions

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@ ga('send', 'pageview');
         <ul class="nav navbar-nav">
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
-          <!--<li> <a href="#sessions" class="smoothScroll"> Sessions</a></li>-->
+          <li> <a href="#sessions" class="smoothScroll"> Sessions</a></li>
           <!--<li> <a href="#spaces" class="smoothScroll"> Spaces</a></li>-->
+        </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -86,7 +87,7 @@ ga('send', 'pageview');
 
 
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="tim-andersen">
         <img class="img img-circle" src="assets/img/speakers/tim-andersen.jpeg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Tim Andersen</b></h4>
@@ -103,7 +104,7 @@ ga('send', 'pageview');
         </p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="ryan-bergman">
         <img class="img img-circle" src="assets/img/speakers/ryan-bergman.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Ryan Bergman</b></h4>
@@ -113,7 +114,7 @@ ga('send', 'pageview');
         <p>Ryan Bergman is a software architect and programmer for John Deere Intelligent Solutions Group in Urbandale Iowa. He has worked as a professional technologist in the Des Moines area for the last 15 years. You can catch Ryan later this summer at the Agile 2014 conference in Orlando where he will be presenting on Continuous Delivery.</p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="brandon-carlson">
         <img class="img img-circle" src="assets/img/speakers/brandon-carlson.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Brandon Carlson</b></h4>
@@ -124,7 +125,7 @@ ga('send', 'pageview');
         </p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="jeffrey-davidson">
         <img class="img img-circle" src="assets/img/speakers/jeffrey-davidson.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Jeffrey Davidson</b></h4>
@@ -138,7 +139,7 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
       </p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="david-hussman">
         <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>David Hussman</b></h4>
@@ -148,7 +149,7 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
         <p></p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="todd-little">
         <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Todd Little</b></h4>
@@ -158,7 +159,7 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
         <p></p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered" id="niel-nickolaisen">
         <img class="img img-circle" src="assets/img/speakers/niel-nickolaisen.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Niel Nickolaisen</b></h4>
@@ -179,7 +180,7 @@ Niel is a popular speaker on a variety of IT and leadership topics including IT 
 </p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered">
         <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Bob Payne</b></h4>
@@ -189,7 +190,7 @@ Niel is a popular speaker on a variety of IT and leadership topics including IT 
         <p></p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered">
         <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Pollyanna Pixton</b></h4>
@@ -199,7 +200,7 @@ Niel is a popular speaker on a variety of IT and leadership topics including IT 
         <p></p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered">
         <img class="img img-circle" src="assets/img/speakers/kristin-runyan.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Kristin Runyan</b></h4>
@@ -209,7 +210,7 @@ Niel is a popular speaker on a variety of IT and leadership topics including IT 
         <p>Kristin Runyan is the VP of Product Management at Businessolver, a benefits administration company located in West Des Moines, IA. Kristin is the co-author of a textbook called “Introduction to Agile Methods” which was released in the summer of 2014. Kristin is certified as a Scrum Master (CSM), Scrum Product Owner (CSPO), and a Project Management Professional (PMP). She is also a 2011 winner of the Women of Innovation award from the Technology Association of Iowa. Kristin got her undergraduate degree at Texas Christian University (TCU) and her MBA at Saint Louis University (SLU). Her twitter handle is @KristinRunyan and she regularly blogs at <a href="http://www.runyanconsulting.com">www.runyanyconsulting.com</a>.</p>
       </div>
 
-      <div class="col-lg-3 centered">
+      <div class="col-md-6 centered">
         <img class="img img-circle" src="assets/img/speakers/natalie-warnert.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Natalie Warnert</b></h4>
@@ -237,18 +238,30 @@ Natalie is a Certified ScrumMaster (CSM) and has her Bachelor of Business Admini
 
 
   <!-- ==== SESSIONS ==== -->
-  <!--<div class="container" id="sessions" name="sessions">-->
-  <!--<div class="row white">-->
-  <!--<br>-->
-  <!--<h1 class="centered">SESSIONS</h1>-->
-  <!--<hr>-->
+  <div class="container" id="sessions" name="sessions">
+    <div class="row white">
+      <br>
+      <h1 class="centered">SESSIONS</h1>
+      <hr>
 
-  <!--<div class="col-lg-2">-->
-  <!--<h1>Coming Soon!</h1>-->
-  <!--</div>-->
+      <div class="col-md-6 centered">
+        <div class="col-md-4">
+          <a href="#niel-nickolaisen" class="smoothScroll">
+            <img class="img img-circle" src="assets/img/speakers/niel-nickolaisen.jpg" height="60px" width="60px" alt="">
+          </a>
+          <br>
+          <h4>Niel Nickolaisen</h4>
+        </div>
+        <div class="col-md-8">
+          <h4><b>Bringing It All Together – Using Agile and Lean To Transform IT</b></h4>
+          <p>
+          The IT group at Western Governors University (WGU) was under incredible pressure. They were tasked with driving innovation, producing significant improvements in operational performance and building credibility – and do this nearly immediately while handling a complete application refresh and dealing with rapid growth. To produce the desired results, the group took a four-pronged approach: They used Agile to improve project results. They relied on Lean to improve internal processes. They rigorously aligned and rationalized the portfolio to the university and market. They created a culture of trust and ownership. The net result was a dramatic increase in throughput and innovation. In this session, Niel Nickolaisen explains the tools WGU used to transform IT.
+          </p>
+        </div>
+      </div>
 
-  <!--</div>-->
-  <!--</div>-->
+    </div>
+  </div>
 
   <!-- ==== SECTION DIVIDER1 -->
   <section class="section-divider textdivider divider1">
