Added Bob Payne and David Hussman speaker bios

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ ga('send', 'pageview');
       <p>Friday, September 12th 2014</p>
       <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Register Now
       </a>
-    </header>	    
+    </header>
   </div>
 
   <!-- ==== SPEAKERS ==== -->
@@ -140,13 +140,13 @@ Mr. Davidson is a recognized expert and sought after speaker in agile methodolog
       </div>
 
       <div class="col-md-6 centered" id="david-hussman">
-        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <img class="img img-circle" src="assets/img/speakers/david-hussman.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>David Hussman</b></h4>
-        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <a href="https://twitter.com/davidhussman" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>David teaches and coaches product discovery through iterative delivery. He has spent the last 10 years coaching agility, Lean practices and producing products for companies of all sizes around the world. For each engagement, David’s coaching is non-dogmatic, well-grounded, challenging and pragmatic. By focusing on really getting to know a project community, David seeds self-discovery and avoids falling into the expert trap of simply telling people what they “should do". David spends most of his time pairing around code and tests, creating product ideas and roadmaps, and helping leadership teams pragmatically introduce the type of agility that fosters innovation and creates a competitive edge. David owns and guides <a href="http://www.devjam.com">DevJam</a> (www.devjam.com), a composition of mentors who blend technology, people, and processes to create better products in competitive cycles.</p>
       </div>
 
       <div class="col-md-6 centered" id="todd-little">
@@ -173,21 +173,23 @@ Niel Nickolaisen is the CIO at OC Tanner. He has held technology executive and o
 He holds a MS in Engineering from MIT, a BS in Physics from Utah State University, and an MBA from Utah State University.
 </p>
 <p>
-He writes an enterprise CIO column for SearchCIO and is a contributor to CIO Magazine. He is the author of “The Agile Culture” (Addison Wesley, 2014) and Stand Back and Deliver (Addison Wesley, 2009). CRN Magazine named Niel one of the top 25 IT Executives of 2008. 
+He writes an enterprise CIO column for SearchCIO and is a contributor to CIO Magazine. He is the author of “The Agile Culture” (Addison Wesley, 2014) and Stand Back and Deliver (Addison Wesley, 2009). CRN Magazine named Niel one of the top 25 IT Executives of 2008.
 </p>
 <p>
-Niel is a popular speaker on a variety of IT and leadership topics including IT Alignment, Strategic Planning, Agile Principles, and IT Lean. Several times a year he teaches a course titled “The Practices of Transformational Leaders” – a course that consistently receives exceptional reviews and feedback.      
+Niel is a popular speaker on a variety of IT and leadership topics including IT Alignment, Strategic Planning, Agile Principles, and IT Lean. Several times a year he teaches a course titled “The Practices of Transformational Leaders” – a course that consistently receives exceptional reviews and feedback.
 </p>
       </div>
 
       <div class="col-md-6 centered">
-        <img class="img img-circle" src="assets/img/speakers/unknown.jpg" height="120px" width="120px" alt="">
+        <img class="img img-circle" src="assets/img/speakers/bob-payne.jpg" height="120px" width="120px" alt="">
         <br>
         <h4><b>Bob Payne</b></h4>
-        <!--<a href="#" class="icon icon-twitter"></a>-->
+        <a href="https://twitter.com/agiletoolkit" class="icon icon-twitter"></a>
         <!--<a href="#" class="icon icon-facebook"></a>-->
         <!--<a href="#" class="icon icon-flickr"></a>-->
-        <p></p>
+        <p>Bob Payne is a leading practitioner and thought leader in the use of Lean and Agile methods for organizational transformation. As an early adopter of Extreme Programming (XP), Scrum and most recently SAFe, he has worked exclusively as an Lean+Agile transformation leader since 1999.  He brings a pragmatic approach to the use of best fit approaches from across the spectrum of Lean+Agile practices and processes.  He believes that the most important piece of any transformation is to build the skills in the teams to build and continuously improve the process.
+
+He is the founder and Chair of the AgileDC conference and is involved and speaks in industry conferences worldwide.  As host of the Agile Toolkit podcast Bob has produced over 170 podcasts, recording a variety of industry leaders and Agile practitioners. With years of Lean+Agile experience, a MSEE in Computer Architectures for Artificial Intelligence and having grown up working in his family restaurant, he brings a unique blend of technical excellence and customer service to bear on his projects and training.</p>
       </div>
 
       <div class="col-md-6 centered">
